--- a/docs.tex
+++ b/docs.tex
@@ -309,7 +309,7 @@ Week 12 & Polishing up BP1 \\
 \label{tab:work_plan_bp1}
 \end{table}
 
-The first semester of working on the bachelor's thesis was mostly dedicated to reading and gathering of materials. This phase consisted of finding relevant articles describing software-implemented fault-tolerance methods that would be feasible to implment. This was surprisingly difficult as the problem space mostly revolves around hardware-implemented fault-tolerance methods.
+The first semester of working on the bachelor's thesis was mostly dedicated to reading and gathering of materials. This phase consisted of finding relevant articles describing software-implemented fault-tolerance methods that would be feasible to implement. This was surprisingly difficult as the problem space mostly revolves around hardware-implemented fault-tolerance methods.
 
 Once a general idea of the thesis became clear, we moved onto the analysis writing stage. Here, general ideas were outlined, this served as a springboard to aid in implementation during the second phase.
 
@@ -341,9 +341,9 @@ Week 12 & Final touches on BP2 \\
 \label{tab:work_plan_bp2}
 \end{table}
 
-The second semester was mostly focused on the implementation of previously analyzed software-tolerance methods. Before implementation, however, the development environment had to be set up. Having to work with a brand new architecture - RISC-V, and unusual operating system - FreeRTOS, the enviornment setup took a lot of time and debugging, especially considering the need to integrate it with Rust programming language.
+The second semester was mostly focused on the implementation of previously analyzed software-tolerance methods. Before implementation, however, the development environment had to be set up. Having to work with a brand new architecture - RISC-V, and unusual operating system - FreeRTOS, the environment setup took a lot of time and debugging, especially considering the need to integrate it with Rust programming language.
 
-After the environment setup, implementation of the selecte techniques began. Once the software was able to run in the simulated environment, we began setting up the fault-insertion and constructing benchmarks to execute.
+After the environment setup, implementation of the select techniques began. Once the software was able to run in the simulated environment, we began setting up the fault-insertion and constructing benchmarks to execute.
 
 The testing and polishing of the benchmarks was also accompanied with writing down the findings and implementation details into the thesis.
 
