--- a/src/annotation.tex
+++ b/src/annotation.tex
@@ -35,11 +35,11 @@ Slovenská technická univerzita v Bratislave
 
 Fakulta informatiky a informačných technológií
 
-Študijný program: \myStudyProgram\\
+Študijný program: Informatika \\
 
 Autor: \myName
 
-Bakalárska práca: \myTitle
+Bakalárska práca: Softvérovo implementovaná tolerancia porúch
 
 Vedúci bakalárskej práce: \mySupervisor
 
